@@ -4,9 +4,9 @@
 # To enable a service, set the value to "YES".
 # To disable a service, set the value to "NO".
 
-rc.sshd_enable=YES
 rc.openibd_enable=YES
 rc.opensm_enable=NO
+rc.sshd_enable=YES
 rc.lvm2_enable=YES
 rc.drbd_enable=NO
 rc.corosync_enable=YES
